<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context="com.appyhigh.adsdk.MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bannerAdButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:textAllCaps="false"
        android:text="@string/banner_ad_example"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/interstitialAdButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/purple_500"
        android:textAllCaps="false"
        android:text="@string/interstitial_ad_example"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/rewardedAdButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:background="@color/purple_500"
        android:text="@string/rewarded_ad_example"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/rewardedInterstitialAdButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:background="@color/purple_500"
        android:text="@string/rewarded_interstitial_ad_example"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nativeAdButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:background="@color/purple_500"
        android:text="@string/native_ad_example"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appOpenAdButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:background="@color/purple_500"
        android:text="@string/appopen_ad_example"
        android:textColor="@color/white" />

</LinearLayout>