<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context="com.appyhigh.adsdk.PreloadMainActivity">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/first_banner_ad_and_first_native_ad_is_preloaded_for_every_section_you_will_need_to_launch_the_activity_again_if_you_want_to_check_preloading_again"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/admob_ads"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bannerAdButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:text="@string/banner_ad_example"
            android:textAllCaps="false"
            android:textColor="@color/white" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nativeAdButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/purple_500"
            android:text="@string/native_ad_example"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/admanager_ads"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bannerAdManagerAdButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:text="@string/banner_ad_example"
            android:textAllCaps="false"
            android:textColor="@color/white" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nativeAdManagerAdButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/purple_500"
            android:text="@string/native_ad_example"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/applovin_ads"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bannerAppLovinAdButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:text="@string/banner_ad_example"
            android:textAllCaps="false"
            android:textColor="@color/white" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nativeAppLovinAdButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/purple_500"
            android:text="@string/native_ad_example"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>
</ScrollView>